# cmake_minimum_required(VERSION <specify CMake version here>)
project(dsti_day_1 C)

set(CMAKE_C_STANDARD 99)

add_executable(dsti_day_1 main.c atm.c block.c exercise6.c DynamicArray.c MultiDArray.c Random.c SwapElements.c StringLength.c DynamicArrayLargest.c AppendArray.c Recursion.h Recursion.c sort.h sort.c)